--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "instashop_assessment",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,6 +11,7 @@
   },
   "dependencies": {
     "next": "14.2.13",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
